--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\sanky\AppData\Local\Temp\testng-eclipse-980499265\testng-customsuite.xml</span>
+                    <span>C:\Users\sanky\AppData\Local\Temp\testng-eclipse-1463295449\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content skipped suite-Default_suite">
                       <span>
                         <img src="skipped.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.sovereigncs.test.TC_CreateUser" class="method navigator-link" hash-for-method="register">register</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.sovereigncs.test.TC_Login" class="method navigator-link" hash-for-method="Login">Login</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content skipped suite-Default_suite -->
@@ -120,17 +120,17 @@
           <div class="suite-Default_suite-class-skipped">
             <div class="main-panel-header rounded-window-top">
               <img src="skipped.png"/>
-              <span class="class-name">com.sovereigncs.test.TC_CreateUser</span>
+              <span class="class-name">com.sovereigncs.test.TC_Login</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="register">
-                  </a> <!-- register -->
-                  <span class="method-name">register</span>
+                  <a name="Login">
+                  </a> <!-- Login -->
+                  <span class="method-name">Login</span>
                   <div class="stack-trace">java.lang.NullPointerException
-	at com.sovereigncs.utilities.XLUtils.setCellData(XLUtils.java:79)
-	at com.sovereigncs.test.BaseClass.setup(BaseClass.java:54)
+	at com.sovereigncs.test.BaseClass.captureScreen(BaseClass.java:99)
+	at com.sovereigncs.test.BaseClass.setup(BaseClass.java:55)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -164,7 +164,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\sanky\AppData\Local\Temp\testng-eclipse-980499265\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\sanky\AppData\Local\Temp\testng-eclipse-1463295449\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -173,7 +173,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.sovereigncs.test.TC_CreateUser&quot;/&gt;
+      &lt;class name=&quot;com.sovereigncs.test.TC_Login&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -215,8 +215,8 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'register')
-data.setCell(0, 2, 'com.sovereigncs.test.TC_CreateUser')
+data.setCell(0, 1, 'Login')
+data.setCell(0, 2, 'com.sovereigncs.test.TC_Login')
 data.setCell(0, 3, 0);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
@@ -248,9 +248,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.sovereigncs.test.TC_CreateUser</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.sovereigncs.test.TC_Login</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">register</span>
+                <span class="method-name">Login</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test before">
